--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,16 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/darkly/bootstrap.min.css" rel="stylesheet" integrity="sha256-KC5lAzGRWwscU0sTmXtd8ka5mt7Vk8a0L5JqOhwA28s= sha512-+f2l7T69JKgnn0+Lc8P0WpM4J34GfEIInTI+iLOQWekcR9KxXE1epKQkwzFIZ7mf12jQlCryh2HfZqS8GcpR8Q==" crossorigin="anonymous">
-    
-    <title>hola</title>
-    
-  </head>
-  <body>
-    <h1>Hello Hackers</h1>
-    
-    
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8">
+		<link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/darkly/bootstrap.min.css" rel="stylesheet" integrity="sha256-KC5lAzGRWwscU0sTmXtd8ka5mt7Vk8a0L5JqOhwA28s= sha512-+f2l7T69JKgnn0+Lc8P0WpM4J34GfEIInTI+iLOQWekcR9KxXE1epKQkwzFIZ7mf12jQlCryh2HfZqS8GcpR8Q==" crossorigin="anonymous">
+		
+		<title>hola</title>
+		
+	</head>
+	<body>
+		
+		<div class="container well text-center auto-responsive">
+			<h1>Hello Hackers</h1>
+			<div class="row">
+				<div class="col-xs-4">
+					<div class="text-justify">
+						<h1>Primer Post</h1>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium tempora autem praesentium consequatur assumenda explicabo quos sed, rerum eos rem quidem mollitia quas, commodi laboriosam perferendis sit possimus. Natus, nostrum.
+					</div>
+					<div class="text-justify">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde ut dolor dignissimos doloribus, atque quod aspernatur, sed ipsa rem porro molestiae voluptatem perferendis voluptates impedit cumque ducimus inventore vel consequatur.
+					</div>
+				</div>
+				<div class="col-xs-4">
+					<h1>Mi segundo post</h1>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod nisi odit sit fugiat. Nesciunt quia temporibus ad dignissimos, blanditiis amet illo, dolore alias deserunt doloribus, inventore. Dignissimos impedit quibusdam iure.
+					</p>
+				</div>
+				<div class="col-xs-4">
+					<h1>Mi tercer post</h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim ipsam cupiditate voluptates facere quod quo, sapiente consectetur? Iure temporibus omnis sit officiis? Perferendis officia iusto, molestiae ratione ea praesentium ut!
+					</p>
+				</div>
+			</div>
+		</div>
+		<div class="container-fluid text-center">
+			<div class="row">
+				<div class="colxs12">
+					<h1>Contendedor Fluido</h1>
+					<p class="text-justify">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum dolores quaerat nesciunt inventore illo corrupti doloremque vitae possimus hic cum nobis, a facilis aperiam ratione iste, repudiandae, quas ipsam nisi?
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum dicta nesciunt aut perferendis id sed ducimus delectus iusto, molestias recusandae quia, voluptatum deleniti neque, voluptate accusamus quasi maxime excepturi quidem?
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, rem, expedita. Asperiores facilis, alias nisi laborum. Quia ducimus tenetur dignissimos hic deserunt. Numquam voluptates sed ullam veritatis voluptatum similique animi!
+					</p>
+				</div>
+			</div>
+		</div>
+		
+		
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>
+	</body>
 </html
