Cargando cambios en list_post

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,53 +1,119 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8">
+		
 		<link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/darkly/bootstrap.min.css" rel="stylesheet" integrity="sha256-KC5lAzGRWwscU0sTmXtd8ka5mt7Vk8a0L5JqOhwA28s= sha512-+f2l7T69JKgnn0+Lc8P0WpM4J34GfEIInTI+iLOQWekcR9KxXE1epKQkwzFIZ7mf12jQlCryh2HfZqS8GcpR8Q==" crossorigin="anonymous">
-		
-		<title>hola</title>
-		
+		<link href='https://fonts.googleapis.com/css?family=Rokkitt' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'> <!-- link para fuente "pacifico" de googleFonts -->
+		<title>Mike Mancera Developer Jr</title>
+		<style>
+		body {
+			margin-top: 30px;
+		}
+			.pacifico{
+				font-family: 'Pacifico', cursive;
+			}
+			.rokkits{
+				font-family: 'Rokkitt', serif;
+			}
+			.rokkit{
+				font-family: 'Rokkitt', serif;
+				margin-top: -20px;
+			}
+			div.secciones {
+				height: 900px;
+				
+				margin-bottom: 20px;
+				border-bottom: 3px solid #666;
+				font-size: 26px;
+
+			}
+			nav {
+				position: fixed;
+				top: 2px;
+				left: 905px;
+				width: 100%;
+				background-color: rgba(255, 255, 255, 0.5);
+				padding: 5px 0px;
+			}
+			nav a {
+				padding: 10px;
+				text-decoration: none;
+				font-size: 22px;
+				color: black;
+			}
+		</style>
 	</head>
 	<body>
-		
-		<div class="container well text-center auto-responsive">
-			<h1>Hello Hackers</h1>
-			<div class="row">
-				<div class="col-xs-4">
-					<div class="text-justify">
-						<h1>Primer Post</h1>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium tempora autem praesentium consequatur assumenda explicabo quos sed, rerum eos rem quidem mollitia quas, commodi laboriosam perferendis sit possimus. Natus, nostrum.
-					</div>
-					<div class="text-justify">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde ut dolor dignissimos doloribus, atque quod aspernatur, sed ipsa rem porro molestiae voluptatem perferendis voluptates impedit cumque ducimus inventore vel consequatur.
-					</div>
-				</div>
-				<div class="col-xs-4">
-					<h1>Mi segundo post</h1>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod nisi odit sit fugiat. Nesciunt quia temporibus ad dignissimos, blanditiis amet illo, dolore alias deserunt doloribus, inventore. Dignissimos impedit quibusdam iure.
-					</p>
-				</div>
-				<div class="col-xs-4">
-					<h1>Mi tercer post</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim ipsam cupiditate voluptates facere quod quo, sapiente consectetur? Iure temporibus omnis sit officiis? Perferendis officia iusto, molestiae ratione ea praesentium ut!
-					</p>
-				</div>
-			</div>
+		<nav class="text-rigth pacifico">
+			<a href="#seccion-0" class="opcion-menu">Linux</a> |
+			<a href="#seccion-2" class="opcion-menu">Windows</a> |
+			<a href="#seccion-3" class="opcion-menu">Mac OS</a> |
+			<a href="#seccion-4" class="opcion-menu">Contacto</a> |
+		</nav>
+		<div class="container-fluid" id="seccion-0">
+			<h1 class="pacifico text-center" style="color:#2D3DFF">
+				
+			</style>Mike Mancera</h1>
+			<h2 class="rokkit text-center">Developer Jr</h2>
 		</div>
-		<div class="container-fluid text-center">
-			<div class="row">
-				<div class="colxs12">
-					<h1>Contendedor Fluido</h1>
-					<p class="text-justify">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum dolores quaerat nesciunt inventore illo corrupti doloremque vitae possimus hic cum nobis, a facilis aperiam ratione iste, repudiandae, quas ipsam nisi?
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum dicta nesciunt aut perferendis id sed ducimus delectus iusto, molestias recusandae quia, voluptatum deleniti neque, voluptate accusamus quasi maxime excepturi quidem?
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, rem, expedita. Asperiores facilis, alias nisi laborum. Quia ducimus tenetur dignissimos hic deserunt. Numquam voluptates sed ullam veritatis voluptatum similique animi!
-					</p>
-				</div>
+		<div class="container auto-responsive">
+			
+
+			<div class="secciones well" id="seccion-1">
+				<h1 class="rokkit text-center"><br>Linux</h1>
+				<br><p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				</p>
 			</div>
-		</div>
+			<div class="secciones well" id="seccion-2">
+				<h1 class="text-center rokkit"><br>Windows</h1>
+				<br><p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				</p>
+			</div>
+			<div class="secciones well" id="seccion-3">
+				<h1 class="text-center rokkit"><br>Mac OS</h1>
+				<br><p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</div>
+			<br>
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+			<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+			<script type="text/javascript">
+					$('html').css({display: 'none'}); // Oculta toda la página en modo 'none'
+					function smoothScrollTo(anchor) {
+					var duration = 1000; // Tiempo en millisegutos que tomará en alcanzar el ancla marcada con el id
+					var targetY = $(anchor).offset().top;
+					$("html, body").animate({
+					"scrollTop" : targetY
+					}, duration, 'easeInOutCubic');
+					}
+					$(document).ready(function(){
+				var hashURL = location.hash;
+				if(hashURL != "" && hashURL.length > 1){ // index.html#seccion-1
+				$(window).scrollTop(0); // Desplaza la página hasta arriba o inicio
+				$('html').css({display: 'block'}); // Muestra toda la página en modo bloque
+				smoothScrollTo(hashURL); // Desplazate muy suave hasta donde está el hastag indicado en la url
+				} else {
+				$('html').css({display: 'block'}); // Muestra toda la página en modo bloque y ya
+				}
+					});
+					// Esto hace que lo hipervínculos funcionen con el desplazamiento suave
+					$('a[href^="#"]').bind('click', function(event){
+			var anchor = $(this).attr('href');
+			smoothScrollTo(anchor);
+			return false; //????
+			});
+			</script>
+		</body>
+		<footer>
+			<div class="container-fluid well text-center" id="seccion-4">
+				<p>
+					Mike Mancera Developer Copyleft 2016 | Buscame en <a href="https://github.com/mikemancera12" target="_blank">Mike Mancera12</a>
+				</p>
+			</div>
+		</footer>
 		
 		
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>
 	</body>
-</html
+</html>
