--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -27,7 +27,6 @@
 				margin-bottom: 20px;
 				border-bottom: 3px solid #666;
 				font-size: 26px;
-
 			}
 			nav {
 				position: fixed;
@@ -53,14 +52,13 @@
 			<a href="#seccion-4" class="opcion-menu">Contacto</a> |
 		</nav>
 		<div class="container-fluid" id="seccion-0">
-			<h1 class="pacifico text-center" style="color:#2D3DFF">
-				
+			<h1 class="pacifico text-center" style="color:#2ABFB7">			
 			</style>Mike Mancera</h1>
 			<h2 class="rokkit text-center">Developer Jr</h2>
 		</div>
+		<img src="" alt="">
 		<div class="container auto-responsive">
 			
-
 			<div class="secciones well" id="seccion-1">
 				<h1 class="rokkit text-center"><br>Linux</h1>
 				<br><p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -74,6 +72,16 @@
 			<div class="secciones well" id="seccion-3">
 				<h1 class="text-center rokkit"><br>Mac OS</h1>
 				<br><p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</div>
+			<div class="secciones well text-center" id="seccion-5">
+				<h1 class="rokkit text-center"><br>Video</h1>
+				<br>
+				
+					
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/WU3UIrq3ix8" frameborder="0" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/yNnEyLw6MA4" frameborder="0" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/QFQ7kDrBH00" frameborder="0" allowfullscreen></iframe>
+				
 			</div>
 			<br>
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -105,6 +113,7 @@
 			});
 			</script>
 		</body>
+
 		<footer>
 			<div class="container-fluid well text-center" id="seccion-4">
 				<p>
