--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -31,7 +31,7 @@
 			nav {
 				position: fixed;
 				top: 2px;
-				left: 905px;
+				left: 825px;
 				width: 100%;
 				background-color: rgba(255, 255, 255, 0.5);
 				padding: 5px 0px;
@@ -49,7 +49,9 @@
 			<a href="#seccion-0" class="opcion-menu">Linux</a> |
 			<a href="#seccion-2" class="opcion-menu">Windows</a> |
 			<a href="#seccion-3" class="opcion-menu">Mac OS</a> |
+			<a href="#seccion-5" class="opcion-menu">Video</a> |
 			<a href="#seccion-4" class="opcion-menu">Contacto</a> |
+
 		</nav>
 		<div class="container-fluid" id="seccion-0">
 			<h1 class="pacifico text-center" style="color:#2ABFB7">			
@@ -79,9 +81,7 @@
 				
 					
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/WU3UIrq3ix8" frameborder="0" allowfullscreen></iframe>
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/yNnEyLw6MA4" frameborder="0" allowfullscreen></iframe>
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/QFQ7kDrBH00" frameborder="0" allowfullscreen></iframe>
-				
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/yNnEyLw6MA4" frameborder="0" allowfullscreen></iframe>				
 			</div>
 			<br>
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
