--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -67,16 +67,14 @@
 		<div class="container-fluid text-center" id="seccion-0">
 			<h1 class="pacifico text-center">Mike Mancera</h1>
 			<h2 class="rokkit text-center">Developer Jr</h2><br>
-			<img src="https://pixabay.com/static/uploads/photo/2012/04/01/12/24/penguin-23159_960_720.png" class="img-responsive center-block" alt="Tux Pinguin">
+			<img src="https://pixabay.com/static/uploads/photo/2012/04/01/12/24/penguin-23159_960_720.png" class="img-responsive center-block" alt="Tux Pinguin"><br>
 		</div>
 		<br><br><br>
 		<div class="container auto-responsive">
-			
 			<div class="secciones well" id="seccion-1">
 				<h1 class="rokkit text-center"><br>Linux</h1>
 				<br><p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 				</p>
-				
 			</div>
 			<div class="secciones well" id="seccion-2">
 				<h1 class="text-center rokkit"><br>Windows</h1>
@@ -90,8 +88,6 @@
 			<div class="secciones well text-center auto-responsive" id="seccion-5">
 				<h1 class="rokkit text-center"><br>Video</h1>
 				<br>
-				
-				
 				<iframe width="460" height="300" src="https://www.youtube.com/embed/WU3UIrq3ix8" frameborder="0" allowfullscreen></iframe><br><br>
 				<iframe width="460" height="300" src="https://www.youtube.com/embed/yNnEyLw6MA4" frameborder="0" allowfullscreen></iframe>
 			</div>
@@ -130,11 +126,9 @@
 				<p>
 					Mike Mancera Developer Copyleft 2016 | Buscame en <a href="https://github.com/mikemancera12" target="_blank">Mike Mancera12</a>
 				</p>
-				
 			</div>
 		</footer>
 		
-		<script src="http://code.jquery.com/jquery.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>
 	</body>
 </html>
