--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,6 +6,7 @@
 		<link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/darkly/bootstrap.min.css" rel="stylesheet" integrity="sha256-KC5lAzGRWwscU0sTmXtd8ka5mt7Vk8a0L5JqOhwA28s= sha512-+f2l7T69JKgnn0+Lc8P0WpM4J34GfEIInTI+iLOQWekcR9KxXE1epKQkwzFIZ7mf12jQlCryh2HfZqS8GcpR8Q==" crossorigin="anonymous">
 		<link href='https://fonts.googleapis.com/css?family=Rokkitt' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'> <!-- link para fuente "pacifico" de googleFonts -->
+		
 		<title>Mike Mancera Developer Jr</title>
 		<style>
 		body {
@@ -35,7 +36,10 @@
 				top: 0px;
 				left: 0px;
 				width: 100%;
-				background-color: rgba(255, 255, 255, 0.5);
+				/*
+				*background-color: rgba(255, 255, 255, 0.5);
+				hace que el nav sea trnsparente
+				*/
 				padding: 5px 0px;
 				text-align: center;
 			}
@@ -69,99 +73,126 @@
 				width: 280px;
 				height:200px;
 			}
+			#imgmenu{
+				width: 60px;
+				height: 30px;
+			}
+			.navbar{
+				position: fixed;
+				top: 0px;
+				left: 0px;
+				width: 100%;
+				/*
+				*background-color: rgba(255, 255, 255, 0.5);
+				hace que el nav sea trnsparente
+				*/
+				padding: 3px 0px;
+				text-align: center;
+
+			}
 		</style>
 	</head>
 	<body>
-		
-		<nav class="text-center rokkits">
-			<a href="#seccion-0" class="opcion-menu">Home</a> |
-			<a href="#seccion-2" class="opcion-menu">Acerca de</a> |
-			<a href="#seccion-3" class="opcion-menu">Proyectos</a> |
-			<a href="#seccion-5" class="opcion-menu">Video</a> |
-			<a href="#seccion-4" class="opcion-menu">Contacto</a> |
+		<nav id="navbar1" class="navbar navbar-default visible-lg visible-md">
+			<ul class="nav nav-pills">
+				<li role="presentation" class="active"><a href="#seccion-0">Home</a></li>
+				<li role="presentation" class="active"><a href="#seccion-2">Acerca de</a></li>
+				<li role="presentation" class="active"><a href="#seccion-3">Proyectos</a></li>
+				<li role="presentation" class="active"><a href="#seccion-4">Videos</a></li>
+				<li role="presentation"><a href="#seccion-5">Contacto</a></li>
+				
+			</ul>
+		</nav>
+		<nav class="navbar navbar-default visible-xs visible-xm">
+			<ul class="nav nav-pills nav-stacked">
+				<li><a href="" title="">
+					<img id="imgmenu" src="https://www.newfangled.com/wp-content/uploads/2014/08/stuffcontentmgrfiles2ac67e44c30a21635f8a9d498f832bc1cmisc_resized80_313_257_hamenu.png" alt="">
+				</a>
+			</li>
+		</ul>
 		</nav>
 		<div class="container-fluid text-center" id="seccion-0">
+		<br><br>
 			<h1 class="pacifico text-center">Mike Mancera</h1>
-			<h2 class="rokkit text-center">Developer Jr</h2><br>
+			<h2 class="rokkit text-center">Systems Developer Jr</h2><br>
 			<img src="https://pixabay.com/static/uploads/photo/2015/03/29/08/55/entrepreneur-696976_960_720.png" class="img-responsive center-block" alt="developer"><br>
 		</div>
+	<br><br>
+	<hr>
+	<div class="container center-block auto-responsive">	
+		<h2 class="pacifico	 text-center" id="seccion-1"><br>Bienvenido a mi Site</h2>
 		
-		
-		<br><br><br>
-		<div class="container center-block auto-responsive">
-			
-			<h2 class="pacifico	 text-center"><br>Bienvenido a mi Site</h2>
-			
-			<div class="secciones well center-block" id="seccion-1">
-				<br><p class="text-justify">Hola, soy Mike y este es mi web site, donde escribo acerca de lo que me gusta hacer, como el desarrollo web, de escritorio, entre otras cosas, aqui puede encontrar algunos de mis proyectos sobre Web Developing, DesktopApp, Administración de Proyectos Informaticos entre otros. Reviselos, y pongase en contacto en caso de que necesite ayuda para algun proyecto en especifico.
-				</p>
-				<img class="center-block img-responsive" src="https://pixabay.com/static/uploads/photo/2015/01/21/14/14/macbook-606763_960_720.jpg" alt="equipos">
-			</div>
-		</div>
-		<div class="container auto-responsive">
-			<h2 class="text-center pacifico"><br>Acerca de</h2>
-			<div class="secciones well center-block" id="seccion-2">
-				
-				<br><p class="text-justify">Soy estudiante de la Carrera de Sistemas Computacionales, me apaciona el desarrollo de softaware y aplicaciones web, mi objetivo laboral es: Participar en una empresa o institución, que ofrezca la oportunidad de mi desarrollo profesional para aplicar de manera eficiente los conocimientos adquiridos en mi formación académica y mejorar en el ambiente profesional.
-				</p>
-				<img class="center-block img-responsive" src="https://pixabay.com/static/uploads/photo/2015/12/04/14/05/code-1076536_960_720.jpg" alt"acerca de">
-			</div>
-		</div>
-		<div class="container auto-responsive">
-			<h2 class="text-center pacifico"><br>Proyectos</h2>
-			<div class="secciones well center-block" id="seccion-3">
-				<img  id="pingux" src="https://pixabay.com/static/uploads/photo/2014/04/03/10/43/apple-311246_960_720.png" class="img-responsive center-block" alt="pingux">
-				
-				<br><p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			</div>
-		</div>
-		<div class="container auto-responsive">
-			<h2 class="pacifico text-center"><br>Video</h2>
-			<div class="secciones well center-block text-center auto-responsive" id="seccion-5">
-				
-				<br>
-				<iframe width="320" height="280" src="https://www.youtube.com/embed/WU3UIrq3ix8" frameborder="0" allowfullscreen></iframe><br><br>
-				<iframe width="320" height="280" src="https://www.youtube.com/embed/yNnEyLw6MA4" frameborder="0" allowfullscreen></iframe>
-			</div>
-		</div>
-		<br>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-		<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-		<script type="text/javascript">
-				$('html').css({display: 'none'}); // Oculta toda la página en modo 'none'
-				function smoothScrollTo(anchor) {
-				var duration = 1000; // Tiempo en millisegutos que tomará en alcanzar el ancla marcada con el id
-				var targetY = $(anchor).offset().top;
-				$("html, body").animate({
-				"scrollTop" : targetY
-				}, duration, 'easeInOutCubic');
-				}
-				$(document).ready(function(){
-			var hashURL = location.hash;
-			if(hashURL != "" && hashURL.length > 1){ // index.html#seccion-1
-			$(window).scrollTop(0); // Desplaza la página hasta arriba o inicio
-			$('html').css({display: 'block'}); // Muestra toda la página en modo bloque
-			smoothScrollTo(hashURL); // Desplazate muy suave hasta donde está el hastag indicado en la url
-			} else {
-			$('html').css({display: 'block'}); // Muestra toda la página en modo bloque y ya
-			}
-				});
-				// Esto hace que lo hipervínculos funcionen con el desplazamiento suave
-				$('a[href^="#"]').bind('click', function(event){
-		var anchor = $(this).attr('href');
-		smoothScrollTo(anchor);
-		return false; //????
-		});
-		</script>
-	</body>
-	<footer>
-		<div class="container-fluid well text-center" id="seccion-4">
-			<p>
-				Mike Mancera Developer Copyleft 2016 | Buscame en <a href="https://github.com/mikemancera12" target="_blank">Mike Mancera12</a>
+		<div class="secciones well center-block">
+			<br><p class="text-justify">Hola, soy Mike y este es mi web site, donde escribo acerca de lo que me gusta hacer, como el desarrollo web, de escritorio, entre otras cosas, aqui puede encontrar algunos de mis proyectos sobre Web Developing, DesktopApp, Administración de Proyectos Informaticos entre otros. Reviselos, y pongase en contacto en caso de que necesite ayuda para algun proyecto en especifico.
 			</p>
+			<img class="center-block img-responsive" src="https://pixabay.com/static/uploads/photo/2015/01/21/14/14/macbook-606763_960_720.jpg" alt="equipos">
 		</div>
-	</footer>
-	
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>
+	</div>
+	<div class="container auto-responsive">
+		<h2 class="text-center pacifico" id="seccion-2"><br>Acerca de</h2>
+		<div class="secciones well center-block">
+			
+			<br><p class="text-justify">Soy estudiante de la Carrera de Sistemas Computacionales, me apaciona el desarrollo de softaware y aplicaciones web, mi objetivo laboral es: Participar en una empresa o institución, que ofrezca la oportunidad de mi desarrollo profesional para aplicar de manera eficiente los conocimientos adquiridos en mi formación académica y mejorar en el ambiente profesional.
+			</p>
+			<img class="center-block img-responsive" src="https://pixabay.com/static/uploads/photo/2015/12/04/14/05/code-1076536_960_720.jpg" alt"acerca de">
+		</div>
+	</div>
+	<div class="container auto-responsive">
+		<h2 class="text-center pacifico" id="seccion-3"><br>Proyectos</h2>
+		<div class="secciones well center-block">
+			<img  id="pingux" src="https://pixabay.com/static/uploads/photo/2014/04/03/10/43/apple-311246_960_720.png" class="img-responsive center-block" alt="pingux">
+			
+			<br><p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+	</div>
+	<div class="container auto-responsive">
+		<h2 class="pacifico text-center" id="seccion-4"><br>Video</h2>
+		<div class="secciones well center-block text-center auto-responsive">
+			
+			<br>
+			<iframe width="320" height="280" src="https://www.youtube.com/embed/WU3UIrq3ix8" frameborder="0" allowfullscreen></iframe><br><br>
+			<iframe width="320" height="280" src="https://www.youtube.com/embed/yNnEyLw6MA4" frameborder="0" allowfullscreen></iframe>
+		</div>
+	</div>
+	<br>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+
+	<script type="text/javascript">
+			$('html').css({display: 'none'}); // Oculta toda la página en modo 'none'
+			function smoothScrollTo(anchor) {
+			var duration = 1000; // Tiempo en millisegutos que tomará en alcanzar el ancla marcada con el id
+			var targetY = $(anchor).offset().top;
+			$("html, body").animate({
+			"scrollTop" : targetY
+			}, duration, 'easeInOutCubic');
+			}
+			$(document).ready(function(){
+		var hashURL = location.hash;
+		if(hashURL != "" && hashURL.length > 1){ // index.html#seccion-1
+		$(window).scrollTop(0); // Desplaza la página hasta arriba o inicio
+		$('html').css({display: 'block'}); // Muestra toda la página en modo bloque
+		smoothScrollTo(hashURL); // Desplazate muy suave hasta donde está el hastag indicado en la url
+		} else {
+		$('html').css({display: 'block'}); // Muestra toda la página en modo bloque y ya
+		}
+			});
+			// Esto hace que lo hipervínculos funcionen con el desplazamiento suave
+			$('a[href^="#"]').bind('click', function(event){
+	var anchor = $(this).attr('href');
+	smoothScrollTo(anchor);
+	return false; //????
+	});
+	</script>
+</body>
+<footer>
+	<div class="container-fluid well text-center" id="seccion-5">
+		<p>
+			Mike Mancera Developer Copyleft 2016 | Buscame en <a href="https://github.com/mikemancera12" target="_blank">Mike Mancera12</a>
+		</p>
+	</div>
+</footer>
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>
 </body>
 </html>
